# KU2025

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  PP_simplePainter  README.md  cmake_install.cmake  infinit.c  test1  test1.cpp
atmega128/: ch10_3_external.c  ch10_4_.c  ch10_5_TempHumid.c  ch10_6_lcdUart.c  ch11_1_motor_delay.c  ch11_2_motorPwm.c  ch11_3.c  ch1_11_Numberutton.c  ch1_12_shiftflag.c  ch1_13_mytimestop.c  ch1_13_timestop.c  ch1_14_usinglib.c  ch1_15_.c  ch1_16_Text_input.c  ch1_17_Light_check.c  ch1_18_lightSensor.c  ch1_19_ledWithTimer.c  ch1_21_led4withtimer.c  ch1_22_ledwith16timer.c  ch1_23_ledSwitchWithTimer3.c  ch1_24_NumberWith.c  ch1_25_piezopiano.c  ch1_26_piezoFND.c  ch1_3_led3.c  ch1_4_led4.c  ch1_5_led5.c  ch1_6_led6.c  ch1_7_chattering_err.c  ch1_7_chattering_solved.c  ch1_8_millisecond.c  ch1_9_Number_output.c  ch_1_20_delta.c
c_example/: 4bit  a.out  arithmetics.c  binary  binary.c  c2f  c_cpp_properties.json  celsius2farh.c  charNumber.c  compare  ddd.c  fahr2cel.c  foutBit.c  genR  genderRatio.c  limit  limit.c  oddeven  tri
c_example/PersonalTest/bowling/: CMakeLists.txt  bowling  main.c  test.c
c_example/PersonalTest/bowling/backup/: a.out  main.c
c_example/PersonalTest/bowling/include/: bowling.h
c_example/PersonalTest/bowling/src/: .env  bowling.c  bowlingsql.c  main.c
c_example/day1and2/: 1  1.c  CMakeLists.txt  Makefile  arithmetics  arithmetics.c  celsius2farh  celsius2farh.c  charNumber  cmake_install.cmake  compare.c  compare2  compare2.c  ddd  fahr2cel  foutBit.c  genderRatio  genderRatio.c  inc  increment.c  limit.c  lit  literal  literal.c  makefile  oddeven.c  sizeof  sizeof.c  triangle.c
c_example/part3/: CMakeLists.txt  arrayAssignment  arrayAssignment.c  arrayCompare  arrayCompare.c  arrayPointer  arrayPointer.c  bubble.c  charAddress  charAddress.c  charPointerOperation.c  dynamicAllocation  dynamicAllocation.c  endian.c  enumExample  enumExample.c  fflushEx  fflushEx.c  fileDescriptor  fileDescriptor.c  filePointer  filePointer.c  functionPointer  functionPointer.c  getSeries  getSeries.c  helloStr.c  makefile  output.txt  pointer2  pointer2.c  pointerConcept  pointerConcept.c  putSeries  putSeries.c  qsort.c  selection.c  strcatExample  strcatExample.c  sumArrayFunction  (+13 more)
c_example/part3/CarSerial/: CMakeLists.txt  Makefile  cmake_install.cmake  main.c  makefile  serial.c  serial.h
c_example/part3/date/: date  date.c  main.c  makefile
c_example/part3/myRandom/: main.c  makefile  myRandom  myRandom.c
c_example/part3/string/: Mystring  Mystring.c  Mystring2  Mystring2.c  Mystring2.h  main.c  main2.c  makefile
cpp/: hello  hello.cpp
ds/: generic  generic.c
matplotlib/: sence.py
ml_dl_python/: PP01_neuralNetwork.ipynb  a01_jupyter.ipynb  a02_fish.ipynb  a03_numpy.ipynb  a04_numpy2.ipynb  a05_data_split.ipynb  a06_regression.ipynb  a07_linear_regression.ipynb  a08_polynormal_reg.ipynb  a09_classfication.ipynb  a10_batch_slope.ipynb  a11_decision_tree.ipynb  a12_cross_validation.ipynb  a13_random_forest.ipynb  a14_titanic.ipynb  a15_pandas.ipynb  a16_kmean.ipynb  a17_pca.ipynb  a19_logistic.ipynb  mlp_test.py  test.py  xgboost_parametric.ipynb
network/: CMakeLists.txt  component.txt  endian_conv.c  helloClient2  helloServer2  helloServer2.c  mq_client  mq_client.c  mq_server.c  pipe.c  pipeClient  pipeServer.c  shm_client.c  (+2 more)
opencv/part2/: 0_drawning  0_drawning.cpp  11_font  11_font.cpp  12_freetypeFont  12_freetypeFont.cpp  13_keyboard  13_keyboard.cpp  14_mousecallback  14_mousecallback.cpp  15_trackbar  15_trackbar.cpp  16_filestorage  16_filestorage.cpp  17_filestorage2  17_filestorage2.cpp  18_camtest  18_camtest.cpp  19_draw_rect_mouse  19_draw_rect_mouse.cpp  20_mask  20_mask.cpp  21_tickmeter  21_tickmeter.cpp  CMakeCache.txt  CMakeLists.txt  Makefile  PP_simplePainter  PP_simplePainter.cpp  cmake_install.cmake  color.hpp
sqlquery/: CMakeLists.txt  Makefile  bookSql  bookSql copy.c  bookSql.c  bookSql2.c  bookSql3  bookSql3.c  bookSql4.c  bookSql5.c  booksql  cmake_install.cmake  createDbTable.sql
sqlquery/include/: bookSql.h
sqlquery/src/: bookSql.c  main.c
(+715 files in other folders)
